--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
             </div> <!--Cierre de escenario-->
         </div> <!--Cierre de escenarios contenedor-->
     </section>
+
+    <section class="galeria contenedor">
+        <h3>Galería</h3>
+        
+        <ul class="galeria-imagenes"></ul>
+    </section>
+    <script src="build/js/app.js"></script>
 </body>
 
 </html>
