--- a/index.html
+++ b/index.html
@@ -170,6 +170,51 @@
         <ul class="galeria-imagenes"></ul>
     </section>
     <script src="build/js/app.js"></script>
-</body>
 
+    <section class="boletos bg-verde">
+        <h3>Boletos</h3>
+
+        <div class="contenedor contenedor-boletos">
+            <div class="basico pase">
+                <p class="nombre-pase">Pase De 1 Día</p>
+                <header class="pase-header">
+                    <p>Incluye:</p>   
+                </header>
+                <div class="pase-body">
+                    <ul>
+                        <li>Acceso a ambos escenarios</li>
+                        <li>Comida y Bebida</li>
+                    </ul>
+                </div>
+                <footer class="pase-footer">
+                    <p>$100</p>
+                </footer>
+            </div>
+            <div class="premium pase">
+                <p class="nombre-pase">Pase De 2 Días</p>
+                <header class="pase-header">
+                    <p>Incluye:</p>   
+                </header>
+                <div class="pase-body">
+                    <ul>
+                        <li>Acceso a ambos escenarios</li>
+                        <li>Comida y Bebida</li>
+                        <li>Camisa de Evento</li>
+                        <li>Acceso VIP</li>
+                    </ul>
+                </div>
+                <footer class="pase-footer">
+                    <p>$200</p>
+                </footer>
+            </div>
+        </div>
+        <div class="pase-boton">
+            <a href="#">¡Consíguelos aquí!</a>
+        </div>
+    </section>
+
+    <footer class="site-footer">
+        <p>Rock & EDM Festival. Todos los derechos reservados 2023</p>
+    </footer>
+</body>
 </html>
